--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
         {
-            "src": "./app.py",
+            "src": "./__init__.py",
             "use": "@vercel/python"
         }
     ]
